Request Process/src/objects/Processing_Material__c.object
<CustomObject>
    <fields>
        <fullName>Blow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kilos__c</fullName>
        <label>Kilos</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lying__c</fullName>
        <label>Lying</label>
        <picklist>
            <picklistValues>
                <fullName>TC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OAK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BWOAK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BWEVA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Bales__c</fullName>
        <label>Number of Bales</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Request__c</fullName>
        <label>Process Request</label>
        <referenceTo>SW_Process_Request__c</referenceTo>
        <relationshipLabel>Processing Materials</relationshipLabel>
        <relationshipName>Processing_Materials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Wash_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wash In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wool_Description__c</fullName>
        <label>Wool Description</label>
        <picklist>
            <picklistValues>
                <fullName>B/F LOCKS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DARK HERD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREASY BLACK/GREY SCOTCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREY TAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCOUROUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWALE GREY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wool_Type_del__c</fullName>
        <label>Wool Type</label>
        <referenceTo>Wool_Type__c</referenceTo>
        <relationshipLabel>Processing Materials</relationshipLabel>
        <relationshipName>Processing_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Processing Material</label>
    <nameField>
        <label>Processing Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processing Materials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>